<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.helper.groups.studenthelper.Groups">

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_add"
        android:title="@string/addAssignment"
        android:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_past_folder"
...
