...

    <EditText
        android:id="@+id/editSemesterTitleEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/editSemesterGPAEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/editSemesterGPATextView"
        android:layout_width="wrap_content"
...
            android:id="@+id/editAddCourseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:text="Add Course"/>
        <Button
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:inputType="numberDecimal"
            android:text="Apply"
            android:visibility="gone"/>
...
