...
            android:layout_alignParentStart="true" />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gpaListView"
        android:layout_below="@id/buttonLayout">

    </ListView>



...
